gsap basic animations

--- a/gsap_01/index.html
+++ b/gsap_01/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header>
         <!-- logo -->
-        <h2><a href="./index.html" class="logo">Your<span class="logoEnd">|Logo</span></a></h2>
+        <h2 class="logo"><a href="./index.html">Your<span class="logoEnd">|Logo</span></a></h2>
         <!-- nav menu links -->
         <nav>
           <a href="" class="link">link1</a>
@@ -20,7 +20,9 @@
           <a href="" class="link">link4</a>
         </nav>
       </header>
-      <section class="main"></section>
+      <section class="main">
+        <div class="box">box</div>
+      </section>
       <footer>
         <div class="part1">
             <a href="" class="link">Showcase</a>
@@ -45,6 +47,7 @@
         </div>
       </footer>
     </div>
+
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
